some refactoring and link invalidation